KAN-3 Le navbar avec 80% des changements ont été effectués avec succés !

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- ===== BOX ICONS =====  -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
-        <title>Portfolio responsive complete</title>
+        <title>Legends Team Portfolio </title>
     </head>
     <body>
         <!--  ===== HEADER =====  -->
@@ -61,7 +61,7 @@
 
                     <div>
                         <h2 class="about__subtitle">HAJJAJ Malak</h2>
-                        <span class="about__profession">Etudiante 4ème Année en Ingénierie Informatique et réseaux - Option MIAGE</span>
+                        <span class="about__profession">Etudiante en 4ème Année en Ingénierie Informatique et réseaux - Option MIAGE</span>
                         <p class="about__text">Étudiante passionnée en Informatique et Réseaux avec une spécialisation en MIAGE à l'EMSI Rabat, je suis actuellement en 4ème année, prête à explorer les opportunités passionnantes du monde de la gestion informatique. Mon parcours académique m'a permis d'acquérir des compétences solides en développement, gestion de projet et solutions informatiques dédiées à la gestion d'entreprise</p>
 
                         <div class="about__social">
@@ -77,9 +77,9 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">We're HAJJAJ Malak & HAMDAOUI Youness</h2>
-                        <span class="about__profession">Computer science students</span>
-                        <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
+                        <h2 class="about__subtitle">HAMDAOUI Youness</h2>
+                        <span class="about__profession">Etudiant en 4ème Année en Ingénierie Informatique et réseaux - Option MIAGE</span>
+                        <p class="about__text">Étudiant passionné en Informatique et Réseaux avec une spécialisation en MIAGE à l'EMSI Rabat, je suis passionné par l'intersection des systèmes UNIX, de la cybersécurité et du développement full-stack. Ces trois domaines me permettent d'explorer le monde numérique sous différents angles et d'acquérir des compétences précieuses pour l'avenir.</p>
 
                         <div class="about__social">
                             <a href="https://www.linkedin.com/in/youness-hamdaoui-4b269b201/" target="_blank" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
