--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Youness's Skills</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
@@ -191,7 +191,7 @@
 
 
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Malak's Skills</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
