--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     </div>
 
                     <div>
-                        <h2 class="about__subtitle">We're HAJJAJ Malak & HAMDAOUI Youness</h2>
-                        <span class="about__profession">Computer science students</span>
+                        <h2 class="about__subtitle">HAMDAOUI Youness</h2>
+                        <span class="about__profession"></span>Etudiant 4ème Année en Ingénierie Informatique et réseaux - Option MIAGE</span>
                         <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
 
                         <div class="about__social">
@@ -139,49 +139,49 @@
 
             <!--===== PORTFOLIO =====-->
             <section class="portfolio section" id="portfolio">
-                <h2 class="section-title">Portfolio</h2>
+                <h2 class="section-title">Portfolio (Compilation of GitHub Projects)</h2>
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work2.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work3.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work4.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work6.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">Voir plus de détails</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                 </div>
