Adding credentials in infos section

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/SCOTTGeek-dev/solution_challenge" target=_blank ="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
@@ -246,42 +246,42 @@
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work2.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work3.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work4.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work6.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
                         </div>
                     </div>
                 </div>
@@ -293,14 +293,16 @@
 
                 <div class="contact__container bd-grid">
                     <div class="contact__info">
-                        <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">info.mail.com</span>
+                        <h3 class="contact__subtitle">Adresse E-mail</h3>
+                        <span class="contact__text">ham.youness@gmail.com | </span>
+                        <span class="contact__text">malak.hajjaj.2019@gmail.com</span>
 
-                        <h3 class="contact__subtitle">PHONE</h3>
-                        <span class="contact__text">+20 999-999</span>
+                        <h3 class="contact__subtitle">Téléphones</h3>
+                        <span class="contact__text">+212656-785099 |</span>
+                        <span class="contact__text">+212671-859647</span>
 
-                        <h3 class="contact__subtitle">ADRESS</h3>
-                        <span class="contact__text">My contry</span>
+                        <h3 class="contact__subtitle">Adresse Campus</h3>
+                        <span class="contact__text"></span>
                     </div>
 
                     <form action="" class="contact__form">
@@ -311,7 +313,7 @@
 
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="submit" value="Enviar" class="contact__button">
+                        <input type="submit" value="Envoyer" class="contact__button">
                     </form>
                 </div>
             </section>
