This the latest version of the footer2

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://github.com/SCOTTGeek-dev/solution_challenge" target=_blank ="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
@@ -178,10 +178,10 @@
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/tela-inicial.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/paulojp-dev/projeto-biblioteca-java?tab=readme-ov-file" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                 </div>
@@ -246,35 +246,35 @@
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work2.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work3.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work4.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="#" class="portfolio__link-name">View details</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
@@ -313,7 +313,7 @@
 
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="submit" value="Envoyer" class="contact__button">
+                        <input type="submit" value="Enviar" class="contact__button">
                     </form>
                 </div>
             </section>
@@ -323,18 +323,18 @@
         <footer class="footer section">
             <div class="footer__container bd-grid">
                 <div class="footer__data">
-                    <h2 class="footer__title">JHON DOE</h2>
-                    <p class="footer__text">I'm Jhon Doe and this is my personal website</p>
+                    <h2 class="footer__title">Hajjaj Malak  Hamdaoui Youness</h2>
+                    <p class="footer__text">Nous sommes Hajjaj Malak Hamdaoui Youness et ceci est notre site personnel</p>
                 </div>
 
                 <div class="footer__data">
-                    <h2 class="footer__title">EXPLORE</h2>
+                    <h2 class="footer__title">DECOUVRIR</h2>
                     <ul>
-                        <li><a href="#home" class="footer__link">Home</a></li>
-                        <li><a href="#about" class="footer__link">About</a></li>
-                        <li><a href="#skills" class="footer__link">Skills</a></li>
+                        <li><a href="#home" class="footer__link">Acceuil</a></li>
+                        <li><a href="#about" class="footer__link">Apropos</a></li>
+                        <li><a href="#skills" class="footer__link">Compétences</a></li>
                         <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
-                        <li><a href="#Contact" class="footer__link">Contact</a></li>
+                        <li><a href="#Contact" class="footer__link">Contactez-nous</a></li>
                     </ul>
                 </div>
                 
@@ -343,6 +343,7 @@
                     <a href="#" class="footer__social"><i class='bx bxl-facebook' ></i></a>
                     <a href="#" class="footer__social"><i class='bx bxl-instagram' ></i></a>
                     <a href="#" class="footer__social"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#" class="footer__social"><i class='bx bxl-github' ></i></a>
                 </div>
 
 
