--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <div>
                         <h2 class="about__subtitle">HAMDAOUI Youness</h2>
                         <span class="about__profession"></span>Etudiant 4ème Année en Ingénierie Informatique et réseaux - Option MIAGE</span>
-                        <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
+                        <p class="about__text">Je m'appelle Youness Hamdaoui, alias Scott *-* .
+                            Étudiant dévoué de 21 ans à l'EMSI, où je crée avec passion un parcours qui croise les systèmes UNIX, la cybersécurité et le développement full-stack. Ces trois piliers constituent le fondement de mon exploration académique et personnelle.</p>
 
                         <div class="about__social">
                             <a href="https://www.linkedin.com/in/youness-hamdaoui-4b269b201/" target="_blank" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
