new elements (portfolio done !)

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <!--===== SKILLS =====-->
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Youness's Skills</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
@@ -147,28 +147,28 @@
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/SCOTTGeek-dev/solution_challenge" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/res.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/atornel/RestaurantAppUIKit/blob/master/ss/res.png" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="assets/img/res1.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/HouariZegai/HotelReservationSystem?tab=readme-ov-file" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/screenshot.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
+                            <a href="https://github.com/mckaywrigley/chatbot-ui" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
@@ -192,7 +192,7 @@
 
 
             <section class="skills section" id="skills">
-                <h2 class="section-title">Skills</h2>
+                <h2 class="section-title">Malak's Skills</h2>
 
                 <div class="skills__container bd-grid">
                     <div class="skills__box">
@@ -240,49 +240,49 @@
 
             <!--===== PORTFOLIO =====-->
             <section class="portfolio section" id="portfolio">
-                <h2 class="section-title">Portfolio</h2>
+                <h2 class="section-title">Portfolio (Compilation of GitHub Projects)</h2>
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
                         <img src="assets/img/work1.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/SCOTTGeek-dev/solution_challenge" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <img src="assets/img/res.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/atornel/RestaurantAppUIKit/blob/master/ss/res.png" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="assets/img/res1.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/HouariZegai/HotelReservationSystem?tab=readme-ov-file" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/screenshot.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="https://github.com/mckaywrigley/chatbot-ui" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
                         <img src="assets/img/work5.jpg" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">View details</a>
+                            <a href="#" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/tela-inicial.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="#" class="portfolio__link-name">(plus de détails)</a>
+                            <a href="https://github.com/paulojp-dev/projeto-biblioteca-java?tab=readme-ov-file" class="portfolio__link-name">(Voir plus de détails)</a>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
 
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="submit" value="Enviar" class="contact__button">
+                        <input type="submit" value="Envoyer" class="contact__button">
                     </form>
                 </div>
             </section>
